--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
 		"start": "astro dev",
 		"build": "astro check && astro build",
 		"preview": "astro preview",
-		"astro": "astro"
+		"astro": "astro",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"type-check": "tsc --noEmit",
+		"format": "prettier --write 'src/**/*.{js,ts,jsx,tsx,astro,css,html,md}'"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
@@ -15,5 +19,12 @@
 		"astro": "^4.16.8",
 		"three": "^0.170.0",
 		"typescript": "^5.6.3"
+	},
+	"devDependencies": {
+		"astro-eslint-parser": "^1.1.0",
+		"eslint-plugin-astro": "^1.3.1",
+		"prettier": "^3.3.3",
+		"prettier-plugin-astro": "^0.14.1",
+		"typescript-eslint": "^8.15.0"
 	}
 }
