--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 	},
 	"devDependencies": {
 		"astro-eslint-parser": "^1.1.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-prettier": "^5.2.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-astro": "^0.14.1",
 		"typescript-eslint": "^8.15.0"
